# rubble

./: .gdbinit  .gitignore  .travis.yml  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  aliases.js  azure-pipelines.yml  build.rs  crates.js  index.html  memory.x  search-index.js  settings.html  source-files.js
demos/demo-utils/: Cargo.toml
demos/demo-utils/src/: lib.rs  logging.rs
demos/nrf52-beacon/: Cargo.toml  README.md
demos/nrf52-beacon/.cargo/: config
demos/nrf52-beacon/src/: main.rs
demos/nrf52-demo/: Cargo.toml  README.md  build.rs
demos/nrf52-demo/.cargo/: config
demos/nrf52-demo/src/: attrs.rs  config.example.rs  logger.rs  main.rs
demos/nrf52-writeable-attributes/: Cargo.toml
demos/nrf52-writeable-attributes/src/: main.rs
demos/nrf52810-demo/: Cargo.toml
demos/nrf52810-demo/src/: logger.rs  main.rs
rubble/: Cargo.toml  all.html  constant.BLUETOOTH_VERSION.html  enum.Error.html  index.html  sidebar-items.js
rubble-demo/: Cargo.toml  README.md
rubble-demo/src/: logger.rs  main.rs
rubble-docs/: Cargo.toml
rubble-docs/src/: lib.rs
rubble-nrf51/: Cargo.toml
rubble-nrf51/src/: lib.rs  radio.rs  timer.rs
rubble-nrf52/: Cargo.toml  build.rs
rubble-nrf52/src/: lib.rs  radio.rs  timer.rs
rubble-nrf52810/: Cargo.toml
rubble-nrf52810/src/: lib.rs  radio.rs  timer.rs
rubble-nrf5x/: Cargo.toml  build.rs
rubble-nrf5x/src/: lib.rs  radio.rs  timer.rs  utils.rs
rubble-tests/: Cargo.toml
rubble-tests/src/: lib.rs
rubble/att/: enum.AttUuid.html  enum.AttributeAccessPermissions.html  index.html  sidebar-items.js  struct.Attribute.html  struct.AttributeServer.html  struct.AttributeServerTx.html  struct.Handle.html  struct.HandleRange.html  struct.NoAttributes.html  trait.AttrValue.html  trait.AttributeProvider.html
rubble/att/handle/: index.html  sidebar-items.js  struct.Handle.html  struct.HandleRange.html  struct.RawHandleRange.html
rubble/att/pdus/: enum.AttPdu.html  enum.ErrorCode.html  enum.Opcode.html  index.html  sidebar-items.js  struct.AttError.html  struct.ByGroupAttData.html  struct.ByTypeAttData.html
rubble/att/server/: constant.DYNAMIC_READ_BUFFER_SIZE.html  index.html  sidebar-items.js  struct.AttributeServer.html  struct.AttributeServerTx.html
rubble/att/uuid/: enum.AttUuid.html  index.html  sidebar-items.js
rubble/beacon/: index.html  sidebar-items.js  struct.Beacon.html  struct.BeaconScanner.html  trait.ScanCallback.html
rubble/bytes/: enum.Inner.html  index.html  sidebar-items.js  struct.ByteReader.html  struct.ByteWriter.html  struct.BytesOr.html  struct.Field.html  struct.IterBytesOr.html  trait.FromBytes.html  trait.RawRepr.html  trait.ToBytes.html
rubble/config/: index.html  sidebar-items.js  trait.Config.html  type.ConfConsumer.html  type.ConfProducer.html
rubble/ecdh/: fn.run_tests.html  index.html  sidebar-items.js  struct.InvalidPublicKey.html  struct.P256Provider.html  struct.P256SecretKey.html  struct.PublicKey.html  struct.RingProvider.html  struct.RingSecretKey.html  struct.SharedSecret.html  trait.EcdhProvider.html  trait.SecretKey.html
rubble/ecdh/p256/: index.html  sidebar-items.js  struct.P256Provider.html  struct.P256SecretKey.html
rubble/ecdh/ring/: index.html  sidebar-items.js  struct.RingProvider.html  struct.RingSecretKey.html
rubble/error/: enum.Error.html  index.html  sidebar-items.js
rubble/gatt/: index.html  sidebar-items.js  struct.Attributes.html  struct.BatteryServiceAttrs.html  struct.MidiServiceAttrs.html
rubble/gatt/characteristic/: enum.Appearance.html  index.html  macro.const_or!.html  macro.const_or.html  sidebar-items.js  struct.BatteryLevel.html  struct.Properties.html  trait.Characteristic.html
rubble/l2cap/: index.html  sidebar-items.js  struct.BleChannelMap.html  struct.Channel.html  struct.ChannelData.html  struct.Header.html  struct.L2CAPState.html  struct.L2CAPStateTx.html  struct.Message.html  struct.Sender.html  trait.ChannelMapper.html  trait.Protocol.html  trait.ProtocolObj.html
rubble/l2cap/signaling/: enum.Code.html  enum.RejectReason.html  index.html  sidebar-items.js  struct.SignalingState.html
rubble/link/: constant.CRC_POLY.html  constant.MIN_DATA_PAYLOAD_BUF.html  constant.MIN_DATA_PDU_BUF.html  constant.MIN_PACKET_BUF.html  constant.MIN_PAYLOAD_BUF.html  constant.MIN_PDU_BUF.html  enum.AddressKind.html  enum.NextUpdate.html  enum.RadioCmd.html  enum.State.html  index.html  sidebar-items.js  struct.Cmd.html  struct.CompanyId.html  struct.Connection.html  struct.DeviceAddress.html  struct.FeatureSet.html  struct.LinkLayer.html  struct.Responder.html  trait.Transmitter.html
rubble/link/ad_structure/: enum.AdStructure.html  enum.Type.html  index.html  sidebar-items.js  struct.Flags.html  struct.ServiceUuids.html
rubble/link/advertising/: constant.ACCESS_ADDRESS.html  constant.CRC_PRESET.html  constant.MAX_PAYLOAD_SIZE.html  constant.RXADD_MASK.html  constant.TXADD_MASK.html  (+8 more)
rubble/log/: index.html  macro.debug.html  macro.error.html  macro.info.html  macro.trace.html  macro.warn.html  sidebar-items.js
rubble/phy/: fn.rf_channel_freq.html  fn.whitening_iv.html  index.html  sidebar-items.js  struct.AdvertisingChannel.html  struct.DataChannel.html  trait.Radio.html
rubble/security/: enum.BondingType.html  enum.Command.html  enum.CommandCode.html  enum.IoCapabilities.html  enum.Oob.html  index.html  sidebar-items.js  struct.AuthReq.html  struct.KeyDistribution.html  struct.NoSecurity.html  struct.PairingRequest.html  struct.SecureConnections.html  struct.SecurityManager.html  trait.SecurityLevel.html
rubble/src/: beacon.rs  bytes.rs  config.rs  crc.rs  error.rs  lib.rs  log.rs  phy.rs  security.rs  security_manager.rs  time.rs  utils.rs  uuid.rs
rubble/time/: index.html  sidebar-items.js  struct.Duration.html  struct.Instant.html  trait.Timer.html
rubble/utils/: index.html  macro.enum_with_unknown.html  sidebar-items.js  struct.Hex.html  struct.HexSlice.html
rubble/uuid/: enum.UuidKind.html  index.html  sidebar-items.js  struct.Uuid.html  struct.Uuid128.html  struct.Uuid16.html  struct.Uuid32.html  trait.IsUuid.html
(+241 files in other folders)
