[package]
authors = ["Jonas Schievink <jonasschievink@gmail.com>"]
categories = ["embedded", "no-std"]
description = "nRF51 BLE demo"
keywords = ["arm", "cortex-m", "template"]
license = "CC-0"
name = "nrf51-ble-demo"
version = "0.1.0"

[dependencies]
cortex-m = "0.5.8"
cortex-m-semihosting = "0.3.2"
cortex-m-rtfm = "0.4.0"
cortex-m-rt = "0.6.7"
embedded-hal = "0.2.2"
nrf51 = "0.6.0"
nrf51-hal = "0.6.1"
nb = "0.1.1"
fpa = "0.1.0"
byteorder = { version = "1.2.1", default-features = false }
panic-halt = "0.2.0"
bitflags = "1.0.4"

[profile.dev]
opt-level = "s"

[profile.release]
opt-level = "s"
debug = true
