[package]
authors = ["Jonas Schievink <jonasschievink@gmail.com>"]
description = "An embedded BLE stack"
categories = ["embedded", "no-std"]
keywords = ["arm", "cortex-m", "bluetooth", "low", "energy"]
repository = "https://github.com/jonas-schievink/rubble/"
license = "CC-0"
name = "rubble"
version = "0.1.0"
edition = "2018"

[dependencies]
cortex-m = "0.6.0"
cortex-m-semihosting = "0.3.2"
cortex-m-rtfm = "0.4.2"
cortex-m-rt = "0.6.7"
embedded-hal = "0.2.2"
nrf52810-hal = { git = "https://github.com/nrf-rs/nrf52-hal", features = ["rt"] }
nb = "0.1.1"
fpa = "0.1.0"
byteorder = { version = "1.3.1", default-features = false }
panic-semihosting = "0.5.1"
bitflags = "1.0.4"
uuid = { version = "0.7.2", default-features = false }

[profile.dev]
opt-level = "s"

[profile.release]
opt-level = "s"
debug = true
