[package]
authors = ["Jonas Schievink <jonasschievink@gmail.com>"]
description = "Rubble BLE stack demo for nRF52810"
categories = ["embedded", "no-std"]
keywords = ["arm", "nrf", "bluetooth", "low", "energy"]
repository = "https://github.com/jonas-schievink/rubble/"
license = "0BSD"
name = "rubble-demo"
version = "0.0.0"
edition = "2018"
publish = false

[dependencies]
rubble = { path = "../rubble", default-features = false }
rubble-nrf52 = { path = "../rubble-nrf52", features = ["52810"] }
cortex-m = "0.5.8"
cortex-m-semihosting = "=0.3.2"
cortex-m-rtfm = "0.4.2"
cortex-m-rt = "0.6.7"
nrf52810-hal = { version = "0.8.0", features = ["rt"] }
byteorder = { version = "1.3.1", default-features = false }
panic-semihosting = "0.5.1"
bbqueue = "0.3.2"

[dependencies.log]
version = "0.4.6"
features = ["release_max_level_warn"]
optional = true

[features]
# Note: To turn this default feature off you must run Cargo from inside the `rubble-demo` directory,
# not from the workspace root.
default = ["rubble/log", "log"]

# Disable documentation to avoid spurious rustdoc warnings
[[bin]]
name = "rubble-demo"
doc = false
