[package]
name = "rubble-docs"
version = "0.0.0"
license = "0BSD"
publish = false

# This crate only exists to work around this Cargo bug:
# https://github.com/rust-lang/cargo/issues/5015

[dependencies]
rubble = { path = "../rubble" }
rubble-nrf5x = { path = "../rubble-nrf5x", features = ["52840"] }
