[package]
authors = ["Jonas Schievink <jonasschievink@gmail.com>"]
description = "Rubble driver for the nRF52-series radios"
categories = ["embedded", "no-std"]
keywords = ["ble", "nrf", "bluetooth", "low", "energy"]
repository = "https://github.com/jonas-schievink/rubble/"
readme = "../README.md"
license = "0BSD"
name = "rubble-nrf52"
version = "0.0.2"
edition = "2018"

[dependencies]
rubble = { path = "../rubble", version = "0.0.2", default-features = false }
nrf52810-hal = { version = "0.8.0", optional = true }
nrf52832-hal = { version = "0.8.0", optional = true }
nrf52840-hal = { version = "0.8.0", optional = true }

[features]
52810 = ["nrf52810-hal"]
52832 = ["nrf52832-hal"]
52840 = ["nrf52840-hal"]
