[package]
authors = ["Jonas Schievink <jonasschievink@gmail.com>"]
description = "Rubble driver for the nRF51/nRF52-series radios"
categories = ["embedded", "no-std"]
keywords = ["ble", "nrf", "bluetooth", "low", "energy"]
repository = "https://github.com/jonas-schievink/rubble/"
license = "0BSD"
name = "rubble-nrf5x"
version = "0.0.3"
edition = "2018"

[dependencies]
rubble = { path = "../rubble", version = "0.0.3", default-features = false }
nrf51-hal = { version = "0.11", optional = true, default-features = false }
nrf52810-hal = { version = "0.12", optional = true, default-features = false }
nrf52832-hal = { version = "0.12", optional = true, default-features = false }
nrf52840-hal = { version = "0.12", optional = true, default-features = false }

[features]
51 = ["nrf51-hal"]
52810 = ["nrf52810-hal"]
52832 = ["nrf52832-hal"]
52840 = ["nrf52840-hal"]
