[package]
authors = ["Jonas Schievink <jonasschievink@gmail.com>"]
description = "Rubble driver for the nRF51/nRF52-series radios"
categories = ["embedded", "no-std"]
keywords = ["ble", "nrf", "bluetooth", "low", "energy"]
repository = "https://github.com/jonas-schievink/rubble/"
license = "0BSD"
name = "rubble-nrf5x"
version = "0.0.4"
edition = "2018"

[dependencies]
rubble = { path = "../rubble", version = "0.0.4", default-features = false }
nrf51-pac = { version = "0.10", optional = true, default-features = false }
nrf52810-pac = { version = "0.10", optional = true, default-features = false }
nrf52811-pac = { version = "0.10", optional = true, default-features = false }
nrf52832-pac = { version = "0.10", optional = true, default-features = false }
nrf52833-pac = { version = "0.10", optional = true, default-features = false }
nrf52840-pac = { version = "0.10", optional = true, default-features = false }

[features]
51 = ["nrf51-pac"]
52810 = ["nrf52810-pac"]
52811 = ["nrf52811-pac"]
52832 = ["nrf52832-pac"]
52833 = ["nrf52833-pac"]
52840 = ["nrf52840-pac"]
