[package]
authors = ["Jonas Schievink <jonasschievink@gmail.com>"]
description = "An embedded BLE stack"
categories = ["embedded", "no-std"]
keywords = ["arm", "ble", "bluetooth", "low", "energy"]
repository = "https://github.com/jonas-schievink/rubble/"
readme = "../README.md"
license = "0BSD"
name = "rubble"
version = "0.0.3"
edition = "2018"

[dependencies]
byteorder = { version = "1.3.2", default-features = false }
bitflags = "1.1.0"
uuid = { version = "0.7.4", default-features = false }
bbqueue = { git = "https://github.com/chocol4te/bbqueue", rev = "9126df3" }

# If the `log` feature is enabled, the `log` crate's macros will be called at various points to dump
# packets, state, and events. By default, it is disabled.
[dependencies.log]
version = "0.4.7"
optional = true

[features]
thumbv6 = ["bbqueue/cortex-m"]
