[package]
authors = ["Jonas Schievink <jonasschievink@gmail.com>"]
description = "An embedded BLE stack"
categories = ["embedded", "no-std"]
keywords = ["arm", "ble", "bluetooth", "low", "energy"]
repository = "https://github.com/jonas-schievink/rubble/"
readme = "../README.md"
license = "0BSD"
name = "rubble"
version = "0.0.3"
edition = "2018"

[dependencies]
byteorder = { version = "1.3.1", default-features = false }
bitflags = "1.0.4"
uuid = { version = "0.7.4", default-features = false }
heapless = "0.5.1"

[dependencies.bbqueue]
git = "https://github.com/jonas-schievink/bbqueue.git"
branch = "rubble"

# If the `log` feature is enabled, the `log` crate's macros will be called at various points to dump
# packets, state, and events. By default, it is disabled.
[dependencies.log]
version = "0.4.6"
optional = true
