[package]
authors = ["Jonas Schievink <jonasschievink@gmail.com>"]
description = "An embedded BLE stack"
categories = ["embedded", "no-std"]
keywords = ["arm", "ble", "bluetooth", "low", "energy"]
repository = "https://github.com/jonas-schievink/rubble/"
readme = "../README.md"
license = "0BSD"
name = "rubble"
version = "0.0.3"
edition = "2018"

[dependencies]
bitflags = "1.2.1"
heapless = "0.5.1"
rand_core = "0.6.0"
sha2 = { version = "0.9.0", default-features = false }

[dependencies.p256]
version = "0.6.0"
default-features = false
features = ["arithmetic"]

# The `ring` feature can be enabled to provide P-256 operations for non-embedded use cases.
[dependencies.ring]
version = "0.16.9"
default-features = false
optional = true

# If the `log` feature is enabled, the `log` crate's macros will be called at various points to dump
# packets, state, and events. By default, it is disabled.
[dependencies.log]
version = "0.4.8"
optional = true

[dev-dependencies]
ring = "0.16.9"

[dev-dependencies.p256]
version = "0.6.0"
default-features = false
features = ["arithmetic"]
