[package]
authors = ["Jonas Schievink <jonasschievink@gmail.com>"]
description = "Rubble BLE stack demo for the nRF52 MCU family"
categories = ["embedded", "no-std"]
keywords = ["arm", "nrf", "bluetooth", "low", "energy"]
repository = "https://github.com/jonas-schievink/rubble/"
license = "0BSD"
name = "nrf52-demo"
version = "0.0.0"
edition = "2018"
publish = false

[dependencies]
rubble = { path = "../../rubble", default-features = false }
rubble-nrf5x = { path = "../../rubble-nrf5x" }
demo-utils = { path = "../demo-utils" }
cortex-m = "0.7.2"
cortex-m-rtic = "0.5.3"
cortex-m-rt = "0.6.11"
bbqueue = "0.4.1"
rtt-target = { version = "0.3.0", features = ["cortex-m"] }
panic-rtt-target = { version = "0.1.1", features = ["cortex-m"] }

nrf52810-hal = { version = "0.12", features = ["rt"], optional = true }
nrf52811-hal = { version = "0.12", features = ["rt"], optional = true }
nrf52832-hal = { version = "0.12", features = ["rt"], optional = true }
nrf52833-hal = { version = "0.12", features = ["rt"], optional = true }
nrf52840-hal = { version = "0.12", features = ["rt"], optional = true }

[dependencies.log]
version = "0.4.8"
features = ["release_max_level_warn"]
optional = true

# Disable documentation to avoid spurious rustdoc warnings
[[bin]]
name = "nrf52-demo"
doc = false
test = false

[features]
# Note: To turn this default feature off you must run Cargo from inside the demo
# directory, not from the workspace root.
default = ["rubble/log", "log"]
52810 = ["rubble-nrf5x/52810", "nrf52810-hal"]
52811 = ["rubble-nrf5x/52811", "nrf52811-hal"]
52832 = ["rubble-nrf5x/52832", "nrf52832-hal"]
52833 = ["rubble-nrf5x/52833", "nrf52833-hal"]
52840 = ["rubble-nrf5x/52840", "nrf52840-hal"]
