[package]
authors = ["Jonathan Shi <jhshi07@gmail.com>"]
description = "Rubble BLE demo with writeable attributes nRF52 MCU family"
categories = ["embedded", "no-std"]
keywords = ["arm", "nrf", "bluetooth", "low", "energy"]
repository = "https://github.com/jonas-schievink/rubble/"
license = "0BSD"
name = "nrf52-writeable-attributes"
version = "0.0.0"
edition = "2018"
publish = false

[dependencies]
rubble = { path = "../../rubble", default-features = false }
# TODO make feature generic
rubble-nrf5x = { path = "../../rubble-nrf5x", features = ["52832"] }
demo-utils = { path = "../demo-utils" }
cortex-m = "0.6.1"
cortex-m-rtic = "0.5.3"
cortex-m-rt = "0.6.11"
rtt-target = { version = "0.2.0", features = ["cortex-m"] }

# TODO uncomment the other versions as well
# nrf52810-hal = { version = "0.12", features = ["rt"], optional = true }
nrf52832-hal = { version = "0.12", features = ["rt"] }
# nrf52840-hal = { version = "0.12", features = ["rt"], optional = true }

# Disable documentation to avoid spurious rustdoc warnings
[[bin]]
name = "nrf52-writeable-attributes"
doc = false
test = false

# [features]
# 52810 = ["rubble-nrf5x/52810", "nrf52810-hal"]
# 52832 = ["rubble-nrf5x/52832", "nrf52832-hal"]
# 52840 = ["rubble-nrf5x/52840", "nrf52840-hal"]
